--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <main>
         <div class="container">
-            <p>Welcome to our mobile landing page. We offer great products and services to meet your needs.</p>
+            <p>Welcome to our mobile landing page. We offer great products and services to meet your needs for everyday.</p>
             <p>Check out our <a href="#" class="button">Products</a> or <a href="#" class="button">Services</a>.</p>
         </div>
     </main>
